Project/Parser/syntax.txt
<program>               --> <data decls> <func list>
<func list>             --> empty
                        | <func> <func list>
<func>                  --> <func decl> ;
                        | <func decl> { <data decls> <statements> }
<func decl>             --> <type name> ID ( <parameter list> )
<type name>             --> int
                        | void
                        | binary
                        | decimal
<parameter list>        --> empty
                        | void
                        | <non-empty list>
<non-empty list>        --> <type name> ID
                        | <non-empty list> comma <type name> ID
<data decls>            --> empty
                        | <type name> <id list> ; <data decls>
<id list>               --> <id>
                        | <id list> comma <id>
<id>                    --> ID
                        | ID [ <expression> ]

<block statements>      --> { <statements> }
<statements>            --> empty
                        | <statement> <statements>
<statement>             --> <assignment>
                        | <func call>
                        | <if statement>
                        | <while statement>
                        | <return statement>
                        | <break statement>
                        | <continue statement>
                        | read ( ID ) ;
                        | write ( <expression> ) ;
                        | print ( STRING ) ;
<assignment>            --> <id> = <expression> ;
<func call>             --> ID ( <expr list> ) ;
<expr list>             --> empty
                        | <non-empty expr list>
<non-empty expr list>   --> <expression>
                        | <non-empty expr list> comma <expression>

<if statement>          --> if ( <condition expression> ) <block statements>
<condition expression>  --> <condition>
                        | <condition> <condition op> <condition>
<condition op>          --> &&
                        | ||
<condition>             --> <expression> <comparison op> <expression>
<comparison op>         --> ==
                        | !=
                        | >
                        | >=
                        | <
                        | <=

<while statement>       --> while ( <condition expression> ) <block statements>
<return statement>      --> return <expression> ;
                        | return ;
<break statement>       --> break ;
<continue statement>    --> continue ;

<expression>            --> <term>
                        | <expression> <addop> <term>
<addop>                 --> +
                        | -
<term>                  --> <factor>
                        | <term> <mulop> <factor>
<mulop>                 --> *
                        | /
<factor>                --> ID
                        | ID [ <expression> ]
                        | ID ( <expr list> )
                        | NUMBER
                        | - NUMBER
                        | ( <expression> )
